--- a/index6.html
+++ b/index6.html
@@ -253,15 +253,15 @@
                 </div>
                 <div class="circle">
                     <p>Project02</p>
-                    <p>React와 Python을<br /> 이용한 뮤직 사이트입니다.</p>
+                    <p>React와 Python을<br /> 이용한 커피 사이트입니다.</p>
                     <p>react.js / javascript</p>
 
-                    <a href="">
+                    <a href="https://coffee-api-rosy.vercel.app/">
                         <span>VIEW</span>
                         <div class="arrow"></div>
                     </a>
                 </div>
-                <div class="one"><a href="">Github</a></div>
+                <div class="one"><a href="https://github.com/gnlgk/coffee-api">Github</a></div>
             </section>
             <section class="sec4__cont4">
                 <div class="imgWrap">
@@ -329,65 +329,51 @@
             <div class="masonry">
                 <div class="item">
                     <div class="item__content">
-                        <div class="blur">
-                            <div class="text">
-                                사이트가 너무 이쁩니다.
-                                저도 이렇게 만들고 싶어요!
-                            </div>
-                            <div class="date">
-                                2023.04.04 누군가가
-                            </div>
+                        <div class="text">
+                            사이트가 너무 이쁩니다.
+                        </div>
+                        <div class="date">
+                            2023.04.04 누군가가
                         </div>
                     </div>
                 </div>
                 <div class="item">
                     <div class="item__content item__content--small">
-                        <div class="blur">
-                            <div class="text">
-                                사이트가 너무 이쁩니다.
-                            </div>
-                            <div class="date">
-                                2023.04.04 누군가가
-                            </div>
+                        <div class="text">
+                            사이트가 너무 이쁩니다.
+                        </div>
+                        <div class="date">
+                            2023.04.04 누군가가
                         </div>
                     </div>
                 </div>
                 <div class="item">
                     <div class="item__content item__content--medium">
-                        <div class="blur">
-                            <div class="text">
-                                사이트가 너무 이쁩니다.
-                                저도 이렇게 만들고 싶어요!
-                            </div>
-                            <div class="date">
-                                2023.04.04 누군가가
-                            </div>
+                        <div class="text">
+                            사이트가 너무 이쁩니다.
+                        </div>
+                        <div class="date">
+                            2023.04.04 누군가가
                         </div>
                     </div>
                 </div>
                 <div class="item">
                     <div class="item__content item__content--small">
-                        <div class="blur">
-                            <div class="text">
-                                사이트가 너무 이쁩니다.
-                                저도 이렇게 만들고 싶어요!
-                            </div>
-                            <div class="date">
-                                2023.04.04 누군가가
-                            </div>
+                        <div class="text">
+                            사이트가 너무 이쁩니다.
+                        </div>
+                        <div class="date">
+                            2023.04.04 누군가가
                         </div>
                     </div>
                 </div>
                 <div class="item">
                     <div class="item__content item__content--medium">
-                        <div class="blur">
-                            <div class="text">
-                                사이트가 너무 이쁩니다.
-                                저도 이렇게 만들고 싶어요!
-                            </div>
-                            <div class="date">
-                                2023.04.04 누군가가
-                            </div>
+                        <div class="text">
+                            사이트가 너무 이쁩니다.
+                        </div>
+                        <div class="date">
+                            2023.04.04 누군가가
                         </div>
                     </div>
                 </div>
@@ -397,15 +383,7 @@
                 </div>
                 <div class="item">
                     <div class="item__content item__content--large">
-                        <div class="blur">
-                            <div class="text">
-                                사이트가 너무 이쁩니다.
-                                저도 이렇게 만들고 싶어요!
-                            </div>
-                            <div class="date">
-                                2023.04.04 누군가가
-                            </div>
-                        </div>
+
                     </div>
                 </div>
                 <div class="item">
@@ -452,43 +430,41 @@
                     <div class="item__content">
                     </div>
                 </div>
-                <div class="item">
+                <div class="item last">
                     <div class="item__content item__content--small">
-                        <div class="blur">
-                            <div class="cmt__input">
-                                <div>댓글쓰기</div>
-                                <input type="text" placeholder="100자 이내의 글을 입력해주세요.">
-                                <input type="text" placeholder="이름을 입력해주세요!">
-                                <button type="submit">등록</button>
-                            </div>
-                        </div>
+                        <div class="cmt_h">댓글쓰기</div>
+                        <input type="text" placeholder="글은 200글자 이내로 작성해주세요!">
+                        <input type="text" placeholder="이름">
+                        <button type="submit">등록</button>
                     </div>
                 </div>
             </div>
+
         </div>
-        <div id="contact">
-            <div class="contact split">Contact<br /> me</div>
-            <div class="text__info">
-                <div>
-                    <h5>You can also find me on</h5>
-                    <ul>
-                        <li><a href="#">Github</a></li>
-                        <li><a href="#">Facebook</a></li>
-                        <li><a href="#">Instagram</a></li>
-                        <li><a href="#">Figma</a></li>
-                    </ul>
-                </div>
-                <div>
-                    <p>
-                        <a href="#">fdcwrt@gmail.com</a>
-                    </p>
-                    <p>CERTIFICATE</p>
-                    <p>정보처리 기능사</p>
-                    <p>웹디자인 기능사</p>
-                    <p>컴퓨터활용능력 1급</p>
-                </div>
+    </div>
+    <div id="contact">
+        <div class="contact split">Contact<br /> me</div>
+        <div class="text__info">
+            <div>
+                <h5>You can also find me on</h5>
+                <ul>
+                    <li><a href="#">Github</a></li>
+                    <li><a href="#">Facebook</a></li>
+                    <li><a href="#">Instagram</a></li>
+                    <li><a href="#">Figma</a></li>
+                </ul>
+            </div>
+            <div>
+                <p>
+                    <a href="#">fdcwrt@gmail.com</a>
+                </p>
+                <p>CERTIFICATE</p>
+                <p class="kor">정보처리 기능사</p>
+                <p class="kor">웹디자인 기능사</p>
+                <p class="kor">컴퓨터활용능력 1급</p>
             </div>
         </div>
+    </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
