--- a/index6.html
+++ b/index6.html
@@ -243,12 +243,12 @@
                     <p>PHP를 이용한 연예인 <br />사진 모음 사이트입니다.</p>
                     <p>html / css / javascript</p>
 
-                    <a href="http://wlsdks.dothome.co.kr/">
+                    <a href="http://wlsdks.dothome.co.kr/" target='_blank'>
                         <span>VIEW</span>
                         <div class="arrow"></div>
                     </a>
                 </div>
-                <div class="one"><a href="https://github.com/gnlgk/formyceleb">Github</a></div>
+                <div class="one"><a href="https://github.com/gnlgk/formyceleb" target='_blank'>Github</a></div>
             </section>
             <section class="sec4__cont3">
                 <div class="imgWrap">
@@ -259,12 +259,12 @@
                     <p>React와 Python을<br /> 이용한 커피 사이트입니다.</p>
                     <p>react.js / javascript</p>
 
-                    <a href="https://coffee-api-rosy.vercel.app/">
+                    <a href="https://coffee-api-rosy.vercel.app/" target='_blank'>
                         <span>VIEW</span>
                         <div class="arrow"></div>
                     </a>
                 </div>
-                <div class="one"><a href="https://github.com/gnlgk/coffee-api">Github</a></div>
+                <div class="one"><a href="https://github.com/gnlgk/coffee-api" target='_blank'>Github</a></div>
             </section>
             <section class="sec4__cont4">
                 <div class="imgWrap">
@@ -275,12 +275,12 @@
                     <p>Vue와 API를<br /> 이용한 영화 사이트입니다.</p>
                     <p>vue.js / javascript</p>
 
-                    <a href="https://vue-movie-virid.vercel.app/">
+                    <a href="https://vue-movie-virid.vercel.app/" target='_blank'>
                         <span>VIEW</span>
                         <div class="arrow"></div>
                     </a>
                 </div>
-                <div class="one"><a href="https://github.com/gnlgk/vue-movie">Github</a></div>
+                <div class="one"><a href="https://github.com/gnlgk/vue-movie" target='_blank'>Github</a></div>
             </section>
             <section class="sec4__cont5">
                 <div class="imgWrap">
@@ -291,12 +291,12 @@
                     <p>React와 Python을<br /> 이용한 뮤직 사이트입니다.</p>
                     <p>react.js / javascript</p>
 
-                    <a href="https://music-youtube-chi.vercel.app/">
+                    <a href="https://music-youtube-chi.vercel.app/" target='_blank'>
                         <span>VIEW</span>
                         <div class="arrow"></div>
                     </a>
                 </div>
-                <div class="one"><a href="https://github.com/gnlgk/Music-youtube">Github</a></div>
+                <div class="one"><a href="https://github.com/gnlgk/Music-youtube" target='_blank'>Github</a></div>
             </section>
             <section class="sec4__cont6">
                 <div class="imgWrap">
@@ -307,12 +307,12 @@
                     <p>리액트와 노드를 이용한 <br />드라이브스루 사이트입니다.</p>
                     <p>react.js / node.js</p>
 
-                    <a href="">
+                    <a href="" target='_blank'>
                         <span>VIEW</span>
                         <div class="arrow"></div>
                     </a>
                 </div>
-                <div class="one"><a href="">Github</a></div>
+                <div class="one"><a href="" target='_blank'>Github</a></div>
             </section>
         </div>
         <div id="section5">
