--- a/index6.html
+++ b/index6.html
@@ -553,7 +553,7 @@
                 start: "top #section1",
                 end: "bottom bottom",
                 scrub: true,
-                markers: true
+                markers: false
             }
         });
 
@@ -608,7 +608,7 @@
             start: () => "+=" + (section4Width - 50),
             end: "top 5%",
             scrub: 0.1,
-            markers: true,
+            markers: false,
             onEnter: () => { console.log('Enter contact'); },
             onLeave: () => { console.log('Leave contact'); }
         });
