--- a/index6.html
+++ b/index6.html
@@ -259,7 +259,7 @@
                     <p>React와 Python을<br /> 이용한 커피 사이트입니다.</p>
                     <p>react.js / javascript</p>
 
-                    <a href="https://coffee-api-rosy.vercel.app/" target='_blank'>
+                    <a href="https://attraction-xi.vercel.app/" target='_blank'>
                         <span>VIEW</span>
                         <div class="arrow"></div>
                     </a>
