--- a/index6.html
+++ b/index6.html
@@ -243,7 +243,7 @@
                     <p>PHP를 이용한 연예인 <br />사진 모음 사이트입니다.</p>
                     <p>html / css / javascript</p>
 
-                    <a href="http://wlsdks.dothome.co.kr/" target='_blank'>
+                    <a href="http://gnlgk.dothome.co.kr/" target='_blank'>
                         <span>VIEW</span>
                         <div class="arrow"></div>
                     </a>
